--- a/Wine Reviews/Wine-Reviews.ipynb
+++ b/Wine Reviews/Wine-Reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,6 +447,47 @@
    ],
    "source": [
     "reviews.groupby(['country','variety']).variety.count().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the most common wine-producing regions?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region_1\n",
+       "Unknown                              21247\n",
+       "Napa Valley                           4480\n",
+       "Columbia Valley (WA)                  4124\n",
+       "Russian River Valley                  3091\n",
+       "California                            2629\n",
+       "                                     ...  \n",
+       "Mount Barker & Margaret River            1\n",
+       "Murray-Darling                           1\n",
+       "Muscat de Saint-Jean de Minervois        1\n",
+       "Canada                                   1\n",
+       "Massachusetts                            1\n",
+       "Name: region_1, Length: 1230, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.region_1 = reviews.region_1.fillna('Unknown')\n",
+    "reviews.groupby('region_1').region_1.count().sort_values(ascending=False)"
    ]
   },
   {
