--- a/Examples/two-sum.ipynb
+++ b/Examples/two-sum.ipynb
@@ -2,35 +2,209 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twoSum(nums: list, target: int) -> list:\n",
+    "    suma_check = 0\n",
+    "    for j in range(len(nums)):\n",
+    "        for i in range(len(nums)):\n",
+    "            if j != i:\n",
+    "                suma_check = nums[j] + nums[i]\n",
+    "                if suma_check == target:\n",
+    "                    return j, i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "suma = 9\n",
     "lista = [1,3,5,6,11,23]\n",
-    "\n",
-    "def sumdoub(suma,lista):\n",
-    "    suma_check = lista[0]\n",
-    "    for j in lista:\n",
-    "        for i in lista:\n",
-    "            suma_check = j\n",
-    "            suma_check += i\n",
-    "            if suma_check == suma:\n",
-    "                print(i, j)\n",
-    "                break\n",
-    "        else:\n",
-    "            continue\n",
-    "        break\n",
-    "\n",
-    "sumdoub(suma,lista)"
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 9\n",
+    "lista = [2,7,11,15]\n",
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 6\n",
+    "lista = [3,3]\n",
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 3)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 0\n",
+    "lista = [0,4,3,0]\n",
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twoSum2(nums: list, target: int) -> list:\n",
+    "    numMap = dict()\n",
+    "    for i in range(len(nums)):\n",
+    "        complement = target - nums[i]\n",
+    "        if complement in numMap:\n",
+    "            return [numMap[complement], i]\n",
+    "        numMap[nums[i]] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 9\n",
+    "lista = [1,3,5,6,11,23]\n",
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 9\n",
+    "lista = [2,7,11,15]\n",
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 6\n",
+    "lista = [3,3]\n",
+    "twoSum(lista,suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 3)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma = 0\n",
+    "lista = [0,4,3,0]\n",
+    "twoSum(lista,suma)"
    ]
   },
   {
@@ -57,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3 (default, Jul  2 2020, 17:30:36) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
